[tool.poetry]
name = "ai-digital-agency"
version = "0.1.0"
description = "A streamlined AI-powered digital agency platform that leverages specialized AI agents"
authors = ["Shireen <shireenlowyk@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
pydantic = "^2.8.2"
agency-swarm = "^0.4.2"
openai = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
